--- a/partials/users.html
+++ b/partials/users.html
@@ -1,37 +1,44 @@
 <h4 class="blog-post-title">Users</h4>
 <hr/>
-<button type="button" class="btn btn-danger fa fa-plus" ng-click="create(user);">&nbsp;Add New User</button>
-
+<button type="button" class="btn btn-danger fa fa-plus" ng-click="create(user);" ng-if="currentuser.profile=='administrator'">&nbsp;Add New User</button>
 <div class="table-responsive">
-<div class="panel panel-primary">
-  <div class="panel-heading">List of users
-      <div class="sw-search" >
-            <div class="nav-search" id="nav-search">
+    <div class="panel panel-primary">
+        <div class="panel-heading">List of users
+            <div class="sw-search">
+                <div class="nav-search" id="nav-search">
                     Filter: <span class="input-icon">
                         <input placeholder="Filter users list ..." class="nav-search-input" ng-model="filterUser" ng-change="resetLimit();"  autocomplete="off" type="text" style="width:300px;" focus>
                         <i class="search-icon fa fa-search nav-search-icon"></i>
                     </span>
+                </div>
             </div>
         </div>
+        <div class="panel-body">
+            <table class="table table-striped">
+                <tr ng-show="users.length==0">
+                    <td style="vertical-align:middle;"><i class="fa fa-ban fa-3x"></i>&nbsp;No data found</td>
+                </tr>
+                <tr ng-hide="users.length>-1">
+                    <td style="vertical-align:middle;"><i class="fa fa-cog fa-3x fa-spin"></i>&nbsp;Loading</td>
+                </tr>
+                <tr>
+                    <th ng-repeat="c in columns">{{c.text}}</th>
+                </tr>
+                <tr ng-repeat="c in users | filter:filterUser | orderBy:'badgeid'" id="{{c.badgeid}}" animate-on-change='c.badgeid + c.fullname + c.profile + c.enddate + c.counterlocked + c.counterinuse' ng-animate=" 'animate'">
+                    <td>{{c.badgeid}}</td>
+                    <td>{{c.fullname}}</td>
+                    <td>{{c.profile}}</td>
+                    <td>{{c.enddate}}</td>
+                    <td>{{c.counterlocked}}</td>
+                    <td>{{c.counterinuse}}</td>
+                    <td style="width:100px">
+                        <div class="btn-group" ng-if="currentuser.profile=='administrator'">
+                            <button type="button" class="btn btn-default fa fa-edit" ng-click="open(c);"></button>
+                            <button type="button" class="btn btn-danger fa fa-trash-o" ng-click="deleteUser(c);"></button>
+                        </div>
+                    </td>
+                </tr>
+            </table> 
+        </div>
     </div>
-  <div class="panel-body">
-    <table class="table table-striped">
-    <tr ng-show="users.length==0"><td style="vertical-align:middle;"><i class="fa fa-ban fa-3x"></i>&nbsp;No data found</td></tr>
-    <tr ng-hide="users.length>-1"><td style="vertical-align:middle;"><i class="fa fa-cog fa-3x fa-spin"></i>&nbsp;Loading</td></tr>
-    
-    <tr><th ng-repeat="c in columns">{{c.text}}</th></tr>
-
-    <tr ng-repeat="c in users | filter:filterUser | orderBy:'badgeid'" id="{{c.badgeid}}" animate-on-change='c.badgeid + c.name + c.lastlogged' ng-animate=" 'animate'">
-        <td>{{c.badgeid}}</td><td>{{c.name}}</td><td>{{c.lastlogged}}</td>
-        <td style="width:100px">
-            <div class="btn-group">
-              <button type="button" class="btn btn-default fa fa-edit" ng-click="open(c);"></button>
-              <button type="button" class="btn btn-danger fa fa-trash-o" ng-click="deleteUser(c);"></button>
-            </div>
-        </td>
-    </tr>
-    </table>
 </div>
-</div>
-</div>
-              
