--- a/css/custom.css
+++ b/css/custom.css
@@ -92,6 +92,20 @@ z-index: 11;
 -webkit-transition: width ease .15s;
 transition: width ease .15s;
 }
+.nav-search .nav-search-input-sm {
+border: 1px solid #6fb3e0;
+width: 125px;
+height: 28px !important;
+padding-top: 2px;
+padding-bottom: 2px;
+border-radius: 4px !important;
+font-size: 13px;
+line-height: 1.3;
+color: #666 !important;
+z-index: 11;
+-webkit-transition: width ease .15s;
+transition: width ease .15s;
+}
 .input-icon>input {
 padding-left: 24px;
 padding-right: 6px;
@@ -151,6 +165,10 @@ padding-right: 6px;
 }
 .sw-search {
 float: right;
+margin-top: -4.5px;
+}
+.sw-filter {
+float: left;
 margin-top: -4.5px;
 }
 /*
