--- a/css/custom.css
+++ b/css/custom.css
@@ -262,3 +262,11 @@ margin-top: -4.5px;
   margin-bottom: 20px;
   color: #999;
 }
+
+/*
+ * Vapor Trail
+ */
+
+.btn-devicestatus {
+  width: 85px;
+}
