--- a/partials/devices.html
+++ b/partials/devices.html
@@ -1,6 +1,4 @@
-<!--
-<h4 class="blog-post-title">Devices</h4>
--->
+<!-- <h4 class="blog-post-title">Devices</h4> -->
 <hr/>
 <button type="button" class="btn btn-danger fa fa-plus" ng-click="create(device);" ng-if="currentuser.profile=='administrator'">&nbsp;Add New Device</button>
 <div class="table-responsive">
