--- a/partials/users.html
+++ b/partials/users.html
@@ -1,6 +1,4 @@
-<!--
-<h4 class="blog-post-title">Users</h4>
--->
+<!-- <h4 class="blog-post-title">Users</h4> -->
 <hr/>
 <button type="button" class="btn btn-danger fa fa-plus" ng-click="create(user);" ng-if="currentuser.profile=='administrator'">&nbsp;Add New User</button>
 <div class="table-responsive">
