--- a/partials/usersEdit.html
+++ b/partials/usersEdit.html
@@ -1,42 +1,41 @@
-    <button type="button" class="close" ng-click="cancel();">
-        <i class="fa fa-times-circle-o" style="margin:10px;color:blue;"></i>
-    </button>
-    <div class="modal-header">
-        <h4 class="modal-title">{{title}}</h4>
-    </div>
-    <div class="modal-body">
-        <form name="user_form" class="form-horizontal" role="form" novalidate>
-
-            <form-element label="BADGE-ID" mod="user">
-                <input type="text" class="form-control" name="badgeid" placeholder="BADGE-ID" ng-model="user.badgeid"/>
+<button type="button" class="close" ng-click="cancel();">
+    <i class="fa fa-times-circle-o" style="margin:10px;color:blue;"></i>
+</button>
+<div class="modal-header">
+    <h4 class="modal-title">{{title}}</h4>
+</div>
+<div class="modal-body">
+    <form name="user_form" class="form-horizontal" role="form" novalidate>
+        <form-element label="Badge ID" mod="user">
+            <!-- todo: class == user_form-control || form-control ? -->
+            <input type="text" class="form-control" name="badgeid" placeholder="badge id" ng-model="user.badgeid" ng-required="true" ng-maxlength="10" />
+        </form-element>
+        <form-element label="Username" mod="user">
+            <input type="text" class="form-control" name="username" placeholder="username" ng-model="user.username" ng-required="true" ng-maxlength="15" />
+        </form-element>
+       <form-element label="Password" mod="user">
+            <input type="text" class="form-control" name="password" placeholder="password" ng-model="user.password" ng-required="true" ng-maxlength="15" />
+        </form-element>
+        <form-element label="Profile" mod="user">
+            <input type="text" name="profile" class="form-control" placeholder="profile" ng-model="user.profile" ng-required="true" ng-maxlength="15" />
+        </form-element>        
+        <form-element label="Name" mod="user">
+            <input type="text" name="fullname" class="form-control" placeholder="firstname lastname" ng-model="user.fullname" ng-maxlength="20" />
+        </form-element>
+        <form-element label="Active until" mod="user">
+            <input type="date" name="enddate" class="form-control" placeholder="active until" ng-model="user.enddate" />
+        </form-element>
+        <div class="space"></div>
+        <div class="space-4"></div>
+        <div class="modal-footer">
+            <form-element label="">
+                <div class="text-right">
+                    <a class="btn btn-sm" ng-click="cancel()"><i class="ace-icon fa fa-reply"></i>Cancel</a>
+                    <button ng-click="saveUser(user);" ng-disabled="user_form.$invalid || enableUpdate" class="btn btn-sm btn-primary" type="submit">
+                        <i class="ace-icon fa fa-check"></i>{{buttonText}}
+                    </button>
+                </div>
             </form-element>
-            
-            <form-element label="NAME" mod="user">
-                <input type="text" name="fullname" class="user_form-control" placeholder="FULLNAME" 
-                ng-model="user.fullname" />
-            </form-element>
-
-            <form-element label="PROFILE" mod="user">
-                <input type="text" name="profile" class="user_form-control" placeholder="PROFILE" ng-model="user.profile" />
-            </form-element>
-
-            
-
-            <div class="space"></div>
-            <div class="space-4"></div>
-            <div class="modal-footer">
-                <form-element label="">
-                    <div class="text-right">
-                        <a class="btn btn-sm" ng-click="cancel()"><i class="ace-icon fa fa-reply"></i>Cancel</a>
-                        <button ng-click="saveUser(user);"
-                                ng-disabled="user_form.$invalid || enableUpdate"
-                                class="btn btn-sm btn-primary"
-                                type="submit">
-                            <i class="ace-icon fa fa-check"></i>{{buttonText}}
-                        </button>
-                    </div>
-                </form-element>
-            </div>
-        </form>
-    </div>
-
+        </div>
+    </form>
+</div>
