--- a/partials/usersEdit.html
+++ b/partials/usersEdit.html
@@ -6,25 +6,35 @@
 </div>
 <div class="modal-body">
     <form name="user_form" class="form-horizontal" role="form" novalidate>
-        <form-element label="Badge ID" mod="user">
-            <!-- todo: class == user_form-control || form-control ? -->
-            <input type="text" class="form-control" name="badgeid" placeholder="badge id" ng-model="user.badgeid" ng-required="true" ng-maxlength="10" />
+
+        <!-- //todo: class == user_form-control || form-control ? -->
+
+        <form-element label="Badge ID" mod="user">            
+            <input type="text" class="form-control" name="badgeid" placeholder="enter badge identifier" ng-model="user.badgeid" ng-required="true" ng-maxlength="10" ng-minlength="1" maxlength="10" />
+            <!--
+            <h1 ng-if="!user_for.badgeid.$valid">The value is too long</h1>
+            -->
         </form-element>
+        <!--
         <form-element label="Username" mod="user">
-            <input type="text" class="form-control" name="username" placeholder="username" ng-model="user.username" ng-required="true" ng-maxlength="15" />
+            <input type="text" class="form-control" name="username" placeholder="enter username" ng-model="user.username" ng-required="true" ng-maxlength="15" maxlength="15" />
         </form-element>
-       <form-element label="Password" mod="user">
-            <input type="text" class="form-control" name="password" placeholder="password" ng-model="user.password" ng-required="true" ng-maxlength="15" />
+        <form-element label="Password" mod="user">
+            <input type="password" class="form-control" name="password" placeholder="enter password" ng-model="user.password" ng-required="true" ng-maxlength="15" maxlength="15" minlength="6" />
         </form-element>
         <form-element label="Profile" mod="user">
-            <input type="text" name="profile" class="form-control" placeholder="profile" ng-model="user.profile" ng-required="true" ng-maxlength="15" />
+            <input type="text" name="profile" class="form-control" placeholder="enter profile" ng-model="user.profile" ng-required="true" ng-maxlength="15" maxlength="15" />
         </form-element>        
         <form-element label="Name" mod="user">
-            <input type="text" name="fullname" class="form-control" placeholder="firstname lastname" ng-model="user.fullname" ng-maxlength="20" />
+            <input type="text" name="fullname" class="form-control" placeholder="enter firstname & lastname" ng-model="user.fullname" ng-maxlength="20" maxlength="20" />
         </form-element>
         <form-element label="Active until" mod="user">
-            <input type="date" name="enddate" class="form-control" placeholder="active until" ng-model="user.enddate" />
+            <input type="date" name="enddate" class="form-control" placeholder="enter date : active until" ng-model="user.enddate" min="{{date | date:'dd/MM/yyyy'}}" />
+         
+            <span ng-show="user_form.enddate.$error.min">End Date should not be less than current date</span>
+
         </form-element>
+        -->
         <div class="space"></div>
         <div class="space-4"></div>
         <div class="modal-footer">
