--- a/partials/usersEdit.html
+++ b/partials/usersEdit.html
@@ -10,31 +10,37 @@
         <!-- //todo: class == user_form-control || form-control ? -->
 
         <form-element label="Badge ID" mod="user">            
-            <input type="text" class="form-control" name="badgeid" placeholder="enter badge identifier" ng-model="user.badgeid" ng-required="true" ng-maxlength="10" ng-minlength="1" maxlength="10" />
+            <input type="text" class="form-control" name="badgeid" placeholder="enter badge identifier" ng-model="user.badgeid" ng-maxlength="10" ng-minlength="1" maxlength="10" required />
             <!--
             <h1 ng-if="!user_for.badgeid.$valid">The value is too long</h1>
             -->
         </form-element>
-        <!--
         <form-element label="Username" mod="user">
-            <input type="text" class="form-control" name="username" placeholder="enter username" ng-model="user.username" ng-required="true" ng-maxlength="15" maxlength="15" />
+            <input type="text" class="form-control" name="username" placeholder="enter username" ng-model="user.username" ng-maxlength="15" maxlength="15" required />
         </form-element>
         <form-element label="Password" mod="user">
-            <input type="password" class="form-control" name="password" placeholder="enter password" ng-model="user.password" ng-required="true" ng-maxlength="15" maxlength="15" minlength="6" />
+            <input type="password" class="form-control" name="password" placeholder="enter password" ng-model="user.password" ng-maxlength="15" ng-minlength="6" maxlength="15" required />
         </form-element>
         <form-element label="Profile" mod="user">
-            <input type="text" name="profile" class="form-control" placeholder="enter profile" ng-model="user.profile" ng-required="true" ng-maxlength="15" maxlength="15" />
+            <!--
+            <input type="text" name="profile" class="form-control" placeholder="enter profile" ng-model="user.profile" ng-maxlength="15" maxlength="15" required />
+            -->
+            <select name="profile" class="form-control" placeholder="enter profile" ng-model="user.profile">
+                <option ng-repeat="option in availableProfiles" value="{{option.id}}">{{option.name}}</option>
+            </select>
         </form-element>        
-        <form-element label="Name" mod="user">
-            <input type="text" name="fullname" class="form-control" placeholder="enter firstname & lastname" ng-model="user.fullname" ng-maxlength="20" maxlength="20" />
+        <form-element label="Firstname" mod="user">
+            <input type="text" name="firstname" class="form-control" placeholder="enter firstname" ng-model="user.firstname" ng-maxlength="20" maxlength="20" />
+        </form-element>
+         <form-element label="Lastname" mod="user">
+            <input type="text" name="lastname" class="form-control" placeholder="enter lastname" ng-model="user.lastname" ng-maxlength="20" maxlength="20" />
         </form-element>
         <form-element label="Active until" mod="user">
-            <input type="date" name="enddate" class="form-control" placeholder="enter date : active until" ng-model="user.enddate" min="{{date | date:'dd/MM/yyyy'}}" />
+            <input type="date" name="enddate" class="form-control" placeholder="enter date : active until" ng-model="user.enddate" min="{{date | date:'yyyy-MM-dd'}}" required />
          
             <span ng-show="user_form.enddate.$error.min">End Date should not be less than current date</span>
-
         </form-element>
-        -->
+
         <div class="space"></div>
         <div class="space-4"></div>
         <div class="modal-footer">
