--- a/partials/login.html
+++ b/partials/login.html
@@ -30,7 +30,7 @@
                         <td>
                         </td>
                         <td>
-                            <button class="btn btn-primary" type="button" ng-disabled="login_form.$invalid" ng-click="login(username, password)" type="submit">Login</button>
+                            <button class="btn btn-primary" type="button" ng-disabled="login_form.$invalid || enableUpdate" ng-click="login(username, password)" type="submit">Login</button>
 
                             <!-- <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button> -->
                         </td>
