--- a/partials/devicesEdit.html
+++ b/partials/devicesEdit.html
@@ -6,6 +6,7 @@
 </div>
 <div class="modal-body">
     <form name="device_form" class="form-horizontal" role="form" novalidate>
+        <!-- mandatory aka required fields -->
         <form-element label="Box ID" mod="device">
             <input type="number" min="1" max="9999" class="form-control" name="boxid" placeholder="enter box identifier" ng-model="device.boxid" ng-maxlength="10" ng-minlength="1" maxlength="10" required />
         </form-element>
@@ -29,6 +30,12 @@
                 <option ng-repeat="option in availableDeviceTypes" value="{{option.id}}" ng-selected="option.name==device.type">{{option.name}}</option>
             </select>
         </form-element>
+        <form-element label="Profile" mod="device">
+            <select name="profile" class="form-control" placeholder="enter profile" ng-model="device.profile" required >
+                <option ng-repeat="option in availableProfiles" value="{{option.id}}" ng-selected="option.name==device.profile">{{option.name}}</option>
+            </select>
+        </form-element>
+        <!-- optional fields -->
         <form-element label="Location" mod="device">
             <input type="text" class="form-control" name="location" placeholder="enter location" ng-model="device.location" ng-maxlength="20" maxlength="20" />
         </form-element>
@@ -38,6 +45,20 @@
         <form-element label="Wifi Password" mod="device">
             <input type="password" class="form-control" name="wifipassword" placeholder="enter wifi password" ng-model="device.wifipassword" ng-maxlength="20" maxlength="20" />
         </form-element>
+        <form-element label="Badge ID" mod="device">
+            <input type="text" class="form-control" name="badgeid" placeholder="enter badge identifier" ng-model="device.badgeid" ng-maxlength="20" maxlength="20" />
+        </form-element>
+        <form-element label="IMEI" mod="device">
+            <input type="text" class="form-control" name="imei" placeholder="enter IMEI number" ng-model="device.imei" ng-maxlength="20" maxlength="20" />
+        </form-element>
+        <form-element label="Serial nbr" mod="device">
+            <input type="text" class="form-control" name="serialnumber" placeholder="enter serial number" ng-model="device.serialnumber" ng-maxlength="20" maxlength="20" />
+        </form-element>
+        <div class="space"></div>
+        <form-element label="Comments" mod="device">
+            <textarea cols="40" rows="6" name="comments" placeholder="enter some comments" ng-model="device.comments" ng-maxlength="250" maxlength="250" ></textarea>
+        </form-element>
+ 
         <div class="space"></div>
         <div class="space-4"></div>
         <div class="modal-footer">
