--- a/partials/deviceDelete.html
+++ b/partials/deviceDelete.html
@@ -6,14 +6,14 @@
 </div>
 <div class="modal-body">
     <form name="confirm_form" class="form-horizontal" role="form" novalidate>
-        <div><i class="ace-icon fa fa-question fa-3x"></i>   OK to delete the user <strong>{{user.fullname}}</strong> ?</div>
+        <div><i class="ace-icon fa fa-question fa-3x"></i>   OK to delete the device <strong>{{device.fullname}}</strong> ?</div>
         <div class="space"></div>
         <div class="space-4"></div>
         <div class="modal-footer">
             <form-element label="">
                 <div class="text-right">
                     <a class="btn btn-sm" ng-click="cancel()"><i class="ace-icon fa fa-reply"></i> Cancel</a>
-                    <button ng-click="confirm(user);" class="btn btn-sm btn-primary" type="submit">
+                    <button ng-click="confirm(device);" class="btn btn-sm btn-primary" type="submit">
                         <i class="ace-icon fa fa-check"></i> {{buttonText}}
                     </button>
                 </div>
